crates/uitest/fixtures/ty/def/mut_arg_non_place_literal_rejected.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/mut_arg_non_place_literal_rejected.fe
---
error[8-0000]: type mismatch
  ┌─ mut_arg_non_place_literal_rejected.fe:4:10
  │
4 │     bump(1 as u256)
  │          ^^^^^^^^^ expected `mut u256`, but `u256` is given
